start playing with sf in md / fix alignment issues thx to Arthur remarks

--- a/vuejs/src/statics/css/otvl_web.css
+++ b/vuejs/src/statics/css/otvl_web.css
@@ -2,6 +2,6 @@
 .page-article a:link, .page-article a:visited, .page-article a:hover, .page-article a:active {
   background-color: #eceff1;
   padding: 2px;
-  color: #1a237e;
+  color: #25495a;
   text-decoration: none;
 }
